2007-08-28  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in: Removed string frozen from 
	gnome-icon-theme HEAD

2007-08-28  Johannes Schmid <jhs@gnome.org>

	* releases.xml.in: gnome-icon-theme branched for 2.20
	* gnome-modules.xml.in: dito

2007-08-28  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Apply String Freeze to GNOME 2.20 modules.
	* releases.xml.in: Epiphany branched for 2.20.

2007-08-27  Danilo Šegan  <danilo@gnome.org>

	* many .py files: implement new infrastructure.

2007-08-27  Gabor Kelemen <kelemeng@gnome.hu>

	* releases.xml.in: Fix rev. 488: totem was branched, not tomboy

2007-08-26  Claude Paroz  <claude@2xlibre.net>

	* templates/module.tmpl:
	* view-module.py: Change branches sorting (first HEAD, then
	descending). Fixes #470422.

2007-08-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: totem branched for 2.20.

2007-08-25  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added reference to Encryption Manuel for
	Seahorse.
	* people.xml.in:
	* translation-teams.xml.in: Corrected id for ymarcheg.

2007-08-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: dasher branched for 2.20.

2007-08-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Added gnome-media doc references recently
	converted to gnome-doc-utils (#405821).

2007-08-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: ekiga branched for 2.20.

2007-08-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-applets branched for 2.18.

2007-08-13  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Two new modules accepted in Development tools for
	2.20 (accerciser and gnome-devel-docs).

2007-08-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Corrected bugzilla ref for phonemgr.
	Fixes #466057.

2007-08-12  Claude Paroz  <claude@2xlibre.net>
