@@ -16,3 +16,5 @@ ru
 sr
 sv
 uk
+zh_CN
+
