@@ -1,3 +1,8 @@
+2007-08-30  Danilo Šegan  <danilo@gnome.org>
+
+	* accept.py (_LanguageSelector.select_from): compare with
+	lower()ed language tag.  Fixes #471710.
+
 2007-08-28  Johannes Schmid <jhs@gnome.org>
 
 	* gnome-modules.xml.in: Removed string frozen from 
